# sf-research-reversal

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  notebook.py  pyproject.toml
research/experiments/: __init__.py  brandon_test.py  brandon_test_notebook.ipynb  experiment_1.py  experiment_10.py  experiment_11.py  experiment_12a.py  experiment_12b.py  experiment_13.py  experiment_2.py  experiment_3.py  experiment_3a.py  experiment_3a_script.sh  experiment_3b.py  experiment_3b_script.sh  experiment_3c.py  experiment_4.py  experiment_5.py  experiment_5a.py  experiment_5b.py  experiment_6.py  experiment_7.py  experiment_7a.py  experiment_7b.py  experiment_8.py  experiment_9a.py  experiment_9b.py
research/pipelines/: __init__.py
research/signals/: barra_reversal.py  reversal.py  volume_adjusted_barra_reversal.py  winsorized_barra_reversal.py  winsorized_volume_adjusted_barra_reversal.py
research/utils/: __init__.py  backtest.py  data_processing.py  mvo.py  mvo_backtest.py  performance.py  quantile_backtest.py
