[project]
name = "sf-research-reversal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "altair>=6.0.0",
    "great-tables>=0.20.0",
    "ipykernel>=7.1.0",
    "marimo>=0.19.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "selenium>=4.39.0",
    "sf-quant>=0.1.17",
    "statsmodels>=0.14.6",
    "vl-convert-python>=1.9.0",
]

[dependency-groups]
dev = [
    "prek>=0.2.27",
]
